--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <button>Energy</button>
         </div>
       </section>
-      <section>
+      <section id="news-board">
          <div class="row news">
              <div class="col-lg-4">
                  <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
@@ -84,6 +84,54 @@
              <div class="col-lg-8">
                  <h2>졸려주ㅡㄱ겠다</h2>
                  <p>대충끝내고 눵야지</p>
+                 <div>
+                    유튜브봐야함20220128
+                 </div>
+             </div>
+         </div>
+         <div class="row news">
+             <div class="col-lg-4">
+                 <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+             </div>
+             <div class="col-lg-8">
+                 <h2>졸려주ㅡㄱ겠다</h2>
+                 <p>대충끝내고 눵야지</p>
+                 <div>
+                    유튜브봐야함20220128
+                 </div>
+             </div>
+         </div>
+         <div class="row news">
+             <div class="col-lg-4">
+                 <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+             </div>
+             <div class="col-lg-8">
+                 <h2>졸려주ㅡㄱ겠다</h2>
+                 <p>대충끝내고 눵야지</p>
+                 <div>
+                    유튜브봐야함20220128
+                 </div>
+             </div>
+         </div>
+         <div class="row news">
+             <div class="col-lg-4">
+                 <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+             </div>
+             <div class="col-lg-8">
+                 <h2>졸려주ㅡㄱ겠다</h2>
+                 <p>대충끝내고 눵야지</p>
+                 <div>
+                    유튜브봐야함20220128
+                 </div>
+             </div>
+         </div>
+         <div class="row news">
+             <div class="col-lg-4">
+                 <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
+             </div>
+             <div class="col-lg-8">
+                 <h2>졸려주ㅡㄱ겠다</h2>
+                 <p maxlength="200">대충끝내고 눵야지</p>
                  <div>
                     유튜브봐야함20220128
                  </div>
@@ -98,5 +146,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
   </body>
 </html>
