--- a/index.html
+++ b/index.html
@@ -77,25 +77,12 @@
         </div>
       </section>
       <section id="news-board">
-         <div class="row news">
-             <div class="col-lg-4">
-                 <img class="news-img-size" src="https://static01.nyt.com/images/2022/01/27/world/27ukraine-biden-europe01SUB/merlin_200959887_762ebb63-110b-4da7-9f62-10675c5d4169-threeByTwoSmallAt2X.jpg?format=pjpg&quality=75&auto=webp&disable=upscale" alt="">
-             </div>
-             <div class="col-lg-8">
-                 <h2>졸려주ㅡㄱ겠다</h2>
-                 <p>대충끝내고 눵야지</p>
-                 <div>
-                    유튜브봐야함20220128
-                 </div>
-             </div>
-         </div>
 
-         </div>
         </section>
     </section>
 
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
+    <nav aria-label="Page navigation example d-flex">
+      <ul class="pagination page-num">
         <!-- <li class="page-item">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
