--- a/index.html
+++ b/index.html
@@ -78,24 +78,16 @@
       </section>
       <section id="news-board">
 
+        <!-- JavaScript -->
+
         </section>
     </section>
 
     <nav aria-label="Page navigation example d-flex">
       <ul class="pagination page-num">
-        <!-- <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <span id="pagination-html"></span> -->
-          <!-- innerHTML -->
+        
+        <!-- JavaScript -->
 
-        <!-- <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li> -->
       </ul>
     </nav>
 
